# cifar10_cnn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  conv.rs  cuda.rs  datasets.rs  dense.rs  lib.rs  loss.rs  main.rs  maxpool.rs  network.rs  optimizer.rs  random.rs  relu.rs  tensor.rs
src/api/: image_util.rs  mod.rs  types.rs
src/api/routes/: mod.rs  model.rs  predict.rs  system.rs  train.rs
src/compute/: mod.rs  random.rs  tensor.rs
src/cuda/: kernels.cu  kernels.rs  mod.rs
src/data/: datasets.rs
src/layers/: conv.rs  dense.rs  maxpool.rs  mod.rs  relu.rs
src/training/: checkpoint.rs  graph.rs  loss.rs  mod.rs  network.rs  optimizer.rs  trainer.rs
src/training/network/: cpu.rs  mod.rs
web/: package-lock.json  package.json
web/src/: app.html
web/src/lib/: api.ts
web/src/lib/components/: BackendToggle.svelte  FilePathInput.svelte  ImageDropzone.svelte  ModelStatus.svelte  PredictResult.svelte  SystemCard.svelte  TrainForm.svelte  TrainProgress.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/model/: +page.svelte
web/src/routes/predict/: +page.svelte
web/src/routes/system/: +page.svelte
web/src/routes/train/: +page.svelte
